testing/test.output
Traceback (most recent call last):
<<<<<<< HEAD
  File "/Users/atlantis/Desktop/cloning/mutate/publictest-full.py", line 8, in <module>
    import fuzzywuzzy 
    ^^^^^^^^^^^^^^^^^
  File "/Users/atlantis/Desktop/cloning/mutate/fuzzywuzzy.py", line 12, in <module>
    PY3 = sys.version_info[93] != 93
          ~~~~~~~~~~~~~~~~^^^^
IndexError: tuple index out of range
=======
  File "publictest-full.py", line 6, in <module>
    import pycodestyle
  File "/usr/local/lib/python3.5/site-packages/pycodestyle.py", line 452
    yield found, f"{code} whitespace before '{char}'"
                                                    ^
SyntaxError: invalid syntax
>>>>>>> 5f15b45479ff427c80b3ca6bd804367592b26407
